<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ui_back">Back</string>
    <string name="ui_more_options">More options</string>
    <string name="ui_play">Play</string>
    <string name="ui_pause">Pause</string>
    <string name="ui_replay">Replay</string>
    <string name="ui_skip_next">Next song</string>
    <string name="ui_skip_previous">Previous song</string>
    <string name="ui_repeat">Repeat</string>
    <string name="ui_repeat_state_off">Off</string>
    <string name="ui_repeat_state_all">Whole queue</string>
    <string name="ui_repeat_state_one">This song</string>
    <string name="ui_shuffle">Shuffle</string>
    <string name="ui_clear_search">Clear search</string>
    <string name="ui_artwork_of">Artwork of %1$s</string>
    <string name="ui_seek_bar">Playback position</string>
    <string name="ui_retry">Try again</string>
    <string name="ui_loading">Loading</string>
    <string name="ui_close">Close</string>
    <string name="ui_now_playing">Now playing</string>
    <string name="ui_song_unavailable_offline">This song isn\'t saved on this device. Connect to the internet to play it.</string>
    <string name="ui_song_state_unavailable">Unavailable offline</string>
    <string name="ui_song_state_paused">Paused</string>
    <string name="ui_artwork_unavailable_offline">Artwork unavailable offline</string>
    <string name="ui_add_to_queue">Add to queue</string>
    <string name="ui_favorite">Like</string>
    <string name="ui_unfavorite">Remove from liked songs</string>
    <string name="ui_added_to_queue">Added to queue</string>
    <string name="ui_duplicate_in_queue_title">Already in the queue</string>
    <string name="ui_duplicate_in_queue_message">“%1$s” is already in your queue. Add it again?</string>
    <string name="ui_duplicate_in_queue_confirm">Add again</string>
    <string name="ui_duplicate_in_queue_cancel">Cancel</string>
...
    <string name="ui_added_to_favorites">Added to liked songs</string>
    <string name="ui_removed_from_favorites">Removed from liked songs</string>
    <string name="ui_move_up">Move up</string>
    <string name="ui_move_down">Move down</string>
    <string name="ui_reorder_songs">Reorder songs</string>
    <string name="ui_reorder_done">Done reordering</string>
    <string name="ui_download">Download</string>
    <string name="ui_remove_download">Remove download</string>
    <string name="ui_song_state_downloaded">Downloaded</string>
    <string name="ui_song_state_downloading">Downloading</string>
    <string name="ui_collection_state_not_downloaded">Not downloaded</string>
    <string name="ui_collection_state_downloading">%1$d of %2$d downloaded</string>
    <string name="ui_collection_state_downloaded">Downloaded</string>
</resources>

