<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mini_player_open">Open the player</string>
    <string name="mini_player_open_queue">Open the queue</string>
</resources>

